# proyecto-Gestor-de-tareas

./: .env_example  .gitignore  README.MD  docker-compose.yml
.github/workflows/: create-issues.yml
backend/: database.py  main.py  pyproject.toml
backend/migrations/: env.py
backend/models/: tablero.py  tarea.py  usuario.py
docs/: Diagrama.puml  drawSQL-pgsql-export-2026-03-21.sql
frontend/: README.md  app.js  index.html
frontend/css/: styles.css
frontend/js/: api.js  auth.js  boards.js  config.js  main.js  router.js  tasks.js  utils.js
