[project]
name = "gestor-tareas"
version = "0.1.0"
description = "Gestor de tareas colaborativo"
requires-python = ">=3.13.7"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.1",
    "passlib>=1.7.4",
    "psycopg2-binary>=2.9.11",
    "python-dotenv>=1.2.2",
    "python-jose>=3.5.0",
    "redis>=7.3.0",
    "uvicorn>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
]
